2023-01-01 (0.8.12)  Robin Gareus <robin@gareus.org>
* add compatibility for ffmpeg-5.1
* fix UI scale when building on 10.15 or later

2022-04-01 (0.8.11)  Robin Gareus <robin@gareus.org>
* add compatibility for ffmpeg-5.0
* update static-builder to use ffmpeg-5.0
* add support for modern mingw (pthread)
* update git clone URIs - avoid git://

2021-01-06 (0.8.10)  Robin Gareus <robin@gareus.org>
* add keyboard shortcuts for +/- 1 second offsets
* tweak Windows installer 32/64bit reg-keys
* fix Linux gcc10 builds
* add support for macOS BigSur and Apple/ARM

2018-11-30 (0.8.9)  Robin Gareus <robin@gareus.org>
* prefer -pthread over -lpthread, fixes #18
* mainly a build-system, binary only update

2018-06-06 (0.8.8)  Robin Gareus <robin@gareus.org>
* use PortMidi default device (allow using portmidisetup)
* fix loading fonts with non ASCII paths on Windows
* allow verbose/debug logging on windows

2016-11-28 (0.8.7)  Robin Gareus <robin@gareus.org>
* fix release builds (mistake in 0.8.6)

2016-11-28 (0.8.6)  Robin Gareus <robin@gareus.org>
* explicitly request single-screen fullscreen on OSX
* weak-link against libjack (binaries)
* add NetBSD support

2015-11-26 (0.8.5)  Robin Gareus <robin@gareus.org>
* release openGL context
* add compatibility for ffmpeg-2.9
* allow to compile on OSX/10.11

2015-09-09 (0.8.4)  Robin Gareus <robin@gareus.org>
* drop jack requirement for OSX

2015-09-09 (0.8.3)  Robin Gareus <robin@gareus.org>
* defined LARGEFILE64 for huge videos
* fix OSX openGL init (El Capitan support)

2015-06-24 (0.8.2)  Robin Gareus <robin@gareus.org>
* fix CPU-hog after end of video
* fix compilation with gcc5
* fix typos in manaul
* various build-system updates (OSX, win)

2014-11-23 (0.8.1)  Robin Gareus <robin@gareus.org>
* fix OSX remote-control threading
* X11 file open dialog
* add recently-used files list
* show splash screen when no file is open
* various typo fixes

2014-08-22 (0.8.0)  Robin Gareus <robin@gareus.org>
* fix various typos