@@ -1,5 +1,10 @@
 <h1>News</h1>
 
+<h2>Version 0.8.13</h2>
+<p>Fix portmidi support for Apple Silicon macOS. Custom Linux builds can now support
+Xinerama (thanks to Ion Reguera) and proper loop/time-mapping (thanks to trinitou).
+</p>
+
 <h2>Version 0.8.12</h2>
 <p>Fix Retina/UI scaling when building on macOS 10.15 (and later). This fixes display
 on Apple Silicon macbook systems. xjadeo 0.8.12 can now also be built with ffmpe v5.1.
