@@ -1,3 +1,8 @@
+2023-09-03 (0.8.13)  Robin Gareus <robin@gareus.org>
+* wrap-around/loop: fix modulo calculation (by trinitou)
+* Add Xinerama support (linux, by Ion Reguera)
+* Update build-scripts, fix macOS portmidi support
+
 2023-01-01 (0.8.12)  Robin Gareus <robin@gareus.org>
 * add compatibility for ffmpeg-5.1
 * fix UI scale when building on 10.15 or later
